--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
     "C_Cpp.intelliSenseEngineFallback": "Enabled",
-    "python.pythonPath": "C:\\Users\\10286997\\AppData\\Local\\Continuum\\anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\10286997\\AppData\\Local\\Continuum\\anaconda3\\python.exe",
+    "python.linting.pep8Enabled": true,
+    "C_Cpp.errorSquiggles": "Enabled"
 }
