--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "type": "shell",
             "label": "g++.exe build active file",
-            "command": "C:\\cygwin64\\\\bin\\g++.exe",
+            "command": "C:\\cygwin64\\bin\\g++.exe",
             "args": [
                 "-g",
                 "--std=c++11",
